[package]
name = "winder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3"
futures = "0.3"
crossterm = { version ="0.20" , features = ["event-stream"] }
futures-timer = "3.0"
async-std = "1.9"